[taotao] resolve div margin collapse issue & refactor scss

--- a/stylesheet/scss/section.scss
+++ b/stylesheet/scss/section.scss
@@ -1,7 +1,14 @@
+@mixin noMarginCollapse {
+  padding-top: 1px;
+  margin-top: -1px;
+}
+
 @mixin section {
+  @include noMarginCollapse;
   background-repeat: no-repeat;
 }
 
+//sections
 .bigSection {
   @include section;
   height: 650px;
@@ -12,6 +19,12 @@
   height: 550px;
 }
 
+.hugeSection {
+  @include section;
+  height: 1200px;
+}
+
+//background picture or colors
 .pair-programming-background {
   background-size: contain;
   background-image: url('../../images/the-game-of-pair.png');
@@ -24,7 +37,17 @@
   background-position: 0 35%;
 }
 
+.activity-process-background {
+  background-color: #0AB0C5;
+}
 
+.thoughtworks-elements-background {
+  background-image: url('../../images/thoughtworks-elements.png');
+  background-position-y: 50%;
+}
+
+//section items
+////picture item
 .section-picture {
   height: 130px;
 
@@ -33,7 +56,7 @@
   background-position-x: 52%;
 }
 
-
+////text item
 @mixin section-text {
   text-align: center;
   color: white;
@@ -54,6 +77,7 @@
   font-size: 15px;
 }
 
+////whitespace decorators
 .section-bigWhitespace {
   margin-top: 60px;
 }
@@ -68,9 +92,4 @@
 
 .section-tinyWhitespace {
   margin-top: 10px;
-}
-
-.thoughtworks-elements-background {
-  background-image: url('../../images/thoughtworks-elements.png');
-  background-position-y: 50%;
 }
